2009-01-22  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Arek

	* flumotion/common/vfsgnome.py:
	Removed an unnecesary call to os.path.abspath.
	* flumotion/component/plugs/base.py:
	Deleted the changes made to the plugs code on r7696.
	* flumotion/scenario/steps/ondemandstep.py:
	Added a model for the logger plug and using it.
	* flumotion/component/consumers/disker/disker.py:
	Marking the string to translate correctly.

2009-01-21  Xavier Queralt Mateu,,,  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Do not run the Assistant when the cleaning operation has not succeed.
	Fixes #1073

2009-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	The "Add new format" action shouldn't be set sensitive until the wizard
	has finished, otherwise it can remain that way even if the wizard
	doesn't configure a flow successly.

2009-01-20  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/live/Makefile.am:
	* flumotion/scenario/ondemand/Makefile.am:
	* flumotion/scenario/steps/Makefile.am:
	Added scenarios registry files to the Makefiles so 
	they are added to the packages.

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Fixed the arguments passed to a N_ method call.

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	Fixed the behaviour of the component list when selecting a component.
	If the component is already selected the UI is not updated anymore.
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	Don't create the Link button until the URI has been received.
	Fixes #1236

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/greeter.py:
	Hide 'Start new manager and connect to it' option on windows.
	Fixes #1179

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/managerspawner.py: